GNOME Bugzilla – Bug 702081
seed_exception_to_string: don't leak the stack msg
Last modified: 2013-06-13 08:47:27 UTC
seed_exception_to_string leaks a string everytime it's called.
Created attachment 246606 [details] [review] seed_exception_to_string: don't leak the stack msg
The patch looks good to me.
Thanks - committed