seed_exception_to_string: don't leak the stack msg

https://bugzilla.gnome.org/show_bug.cgi?id=702081